# Test

./: .gitignore  IAI group codes standards and introductions_you should read it when you use these codes.docx  README.md  requirements.txt
driver/azure_kinect_ros_driver/: CMakeLists.txt
driver/azure_kinect_ros_driver/urdf/: azure_kinect_1.urdf.xacro
driver/gripper_breakdown_solution/: README.md
driver/hrc_simulation/cube/: model.sdf  red_cube.urdf.xacro
driver/hrc_simulation/ur_sim/: .setup_assistant  CMakeLists.txt  package.xml
driver/hrc_simulation/ur_sim/config/: fake_controllers.yaml  gazebo_hrc_sim.urdf  hrc_sim.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
driver/hrc_simulation/ur_sim/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  hrcsim.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  ur5e_moveit_planning_execution.launch
driver/robotiq_85_gripper/robotiq_85_bringup/launch/: robotiq_85.launch
driver/robotiq_85_gripper/robotiq_85_driver/src/robotiq_85/: gripper_io.py
driver/yolov5_ros/yolo_msgs/: CMakeLists.txt
driver/yolov5_ros/yolo_run/: CMakeLists.txt  package.xml
driver/yolov5_ros/yolo_run/launch/: yolov5.launch
driver/yolov5_ros/yolo_run/src/: detect.py
lab_codes/: CMakeLists.txt  package.xml  setup.py
lab_codes/launch/: hrc_interface.launch  run_avoidance_controller.launch  run_ft300sensor_and_gripper.launch  run_gripper_camera_and_URrobot.launch  run_sim.launch  run_top_camera_and_URrobot_.launch  run_yolov5_gripper_camera.launch
lab_codes/scripts/: ROS_Callbacks.py  main_demo_packed_Tony .py  main_demo_voice_pick_Tony.py  sim_move_robot_pick.py
lab_codes/scripts/avoidance_scripts/: full_body_publisher.py  joint_position_movement.py  proximity_check.py  test_avoidance_server.py
lab_codes/scripts/avoidance_scripts/avoidance_functions/: UR5EJacobian.py
lab_codes/scripts/avoidance_scripts/transforms/: UR5e_transform.py  camera_transform.py
lab_codes/scripts/function_library/: voice.py
lab_codes/scripts/function_library/basic_function/: body_track.py  conveyor_control.py  gripper_control.py  open_gripper_ft300_sensor.py  robot_move.py  tool_detect_pick_gripper_camera.py  tool_detect_pick_top_camera.py
lab_codes/scripts/function_library/basic_function/sim/: camera_sim.py  gripper_control_sim.py  robot_move_sim.py
lab_codes/scripts/function_library/fsm_functions/: HRC_FSM.py  Inventory.py  Tool.py
