<package format="2">
  <name>lab_codes</name>
  <version>0.0.0</version>
  <description>The lab_codes package</description>

  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>python3</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <!-- Dependencies for building the package -->
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>robotiq_85_msgs</build_depend>
  <build_depend>avoidance_functions</build_depend>

  <!-- Dependencies for running the package -->
  <exec_depend>python</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>robotiq_85_msgs</exec_depend>
  <exec_depend>avoidance_functions</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- If you have test dependencies -->
  <test_depend>rosunit</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
